# agents

./: .gitignore  CHANGELOG.md  LLM.md  Makefile  README.md  VERSION  biome.json  package-lock.json  package.json  turbo.json
.claude-plugin/: agent-registry.json  hanzo-business-marketplace.json  hanzo-core-marketplace.json  hanzo-csuite-marketplace.json  hanzo-data.json  hanzo-dev-marketplace.json  hanzo-engineering-marketplace.json  hanzo-engineering.json  hanzo-finance-marketplace.json  hanzo-finance.json  hanzo-languages-marketplace.json  hanzo-marketing-marketplace.json  hanzo-marketing.json  hanzo-security.json  hanzo-specialists-marketplace.json  hanzo-support.json  hanzo-team-marketplace.json  index.json  marketplace.json  roles-plugin.json  team-config.json  team-plugin.json
.github/: FUNDING.yml
agents/: README.md  api-documenter.md  architect.md  backend-security-coder.md  bot.md  business-analyst.md  cloud-architect.md  code-reviewer.md  cto.md  data-engineer.md  database-optimizer.md  (+32 more)
sdk/python/: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
sdk/python/hanzo_agents/: README_stdio_bridge.md  __init__.py  agent.py  agent_ai.py  agent_cli.py  agent_field_handler.py  agent_mcp.py  agent_server.py  agent_workflow.py  async_config.py  async_execution_manager.py  client.py  connection_manager.py  decorators.py  did_manager.py  dynamic_skills.py  execution_context.py  http_connection_manager.py  llm_adapters.py  logger.py  mcp_client.py  mcp_stdio_bridge.py  media_providers.py  memory.py  memory_events.py  multimodal_response.py  pydantic_utils.py  rate_limiter.py  status.py  types.py  vc_generator.py  vision.py
sdk/python/hanzo_agents/extensions/: handoff_filters.py
sdk/python/hanzo_agents/extensions/cli/: cli_agent.py
sdk/python/hanzo_agents/extensions/tee/: tee.py
sdk/python/hanzo_agents/extensions/web3/: wallet.py  web3_agent.py  web3_network.py
sdk/python/tests/: .coverage  conftest.py  helpers.py  test_agent_ai.py  test_agent_ai_comprehensive.py  test_agent_call.py  test_agent_cli.py  test_agent_core.py  test_agent_field_handler.py  test_agent_helpers.py  test_agent_integration.py  test_agent_networking.py  test_agent_registry.py  test_agent_resilience.py  test_agent_server.py  test_agent_utils.py  test_agent_workflow.py  test_agent_workflow_registration.py  test_ai_config.py  test_async_config.py  test_async_execution.py  test_async_execution_manager_comprehensive.py  test_async_execution_manager_paths.py  test_client.py  test_client_auth.py  test_client_execution_paths.py  test_client_lifecycle.py  test_client_unit.py  test_connection_manager.py  test_decorators.py  test_did_manager.py  test_dynamic_skills.py  test_execution_context_core.py  test_execution_state.py  test_http_connection_manager.py  test_litellm_adapters.py  test_llm_adapters.py  test_mcp_client.py  test_media_providers.py  test_memory_client_core.py  (+16 more)
sdk/python/tests/integration/: conftest.py  test_agentfield_end_to_end.py
(+934 files in other folders)
